--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                         <span>MVC/Web API</span>
                         <span>ASP.NET</span>
                         <span>Entity Framework Core</span>
+                        <span>Dapper</span>
                         <span>LINQ</span>
                         <span>REST APIs</span>
                         <span>GraphQL</span>
-                        <span>Microservices</span>
+                        <span>Microservices Architecture</span>
                         <span>Event-Driven Architecture</span>
                         <span>DDD</span>
                         <span>CQRS</span>
-                        <span>SOLID</span>
                         <span>Background Services</span>
                         <span>Cron Jobs</span>
                         <span>Mediator Pattern</span>
@@ -105,7 +105,9 @@
                         <span>Razor</span>
                         <span>Bootstrap</span>
                         <span>TypeScript</span>
-                        <span>JavaScript</span>
+                        <span>JavaScript/JQuery</span>
+                        <span>Tailwind CSS</span>
+                        <span>Kendo UI</span>
                         <span>Blazor</span>
                     </div>
                 </div>
@@ -186,6 +188,8 @@
                 <div class="experience-tabs">
                     <button class="tab-btn active" data-tab="speridian">Speridian Technologies</button>
                     <button class="tab-btn" data-tab="calrom">Calrom Pakistan</button>
+                    <button class="tab-btn" data-tab="tekhqs">Tek Headquarters</button>
+                    <button class="tab-btn" data-tab="codedistrict">Code District</button>
                 </div>
                 <div class="experience-content">
                     <div class="experience-panel active" id="speridian">
@@ -241,6 +245,44 @@
                             <li>GRPC</li>
                         </ul>
                     </div>
+                    <div class="experience-panel" id="tekhqs">
+                        <h3>Associate .Net Developer</h3>
+                        <p class="experience-date">Mar 2022 - Dec 2022</p>
+                        <p class="experience-location">Full-stack development</p>
+                        <ul class="experience-list">
+                            <li>Tekhqs specializes in building next-gen digital solutions from Web3 to AI automation and web development</li>
+                            <li>Worked as a key member to develop a web app that processes customer payments from Zoho CRM using EBizCharge API.</li>
+                            <li>Responsible for writing clean and unit tested code that works in production environment</li>
+                        </ul>
+                        <p class="tech-used-label">Technologies Used:</p>
+                        <ul class="experience-tech-list">
+                            <li>C#</li>
+                            <li>.NET Framework</li>
+                            <li>ASP.NET WebForms</li>
+                            <li>ADO.NET</li>
+                            <li>MVC Architecture</li>
+                            <li>EBiz Charge API</li>
+                            <li>Zoho CRM</li>
+                        </ul>
+                    </div>
+                    <div class="experience-panel" id="codedistrict">
+                        <h3>Associate Software Engineer</h3>
+                        <p class="experience-date">Apr 2021 - Feb 2022</p>
+                        <p class="experience-location">Full-stack development</p>
+                        <ul class="experience-list">
+                            <li>Worked on a project that builds dynamic website by retrieving data from Orchard Core CMS using GraphQL</li>
+                            <li>Optimized the site and page load time 90% faster.</li>
+                            <li>Development, direct client communication, team collaboration and scrum meetings</li>
+                        </ul>
+                        <p class="tech-used-label">Technologies Used:</p>
+                        <ul class="experience-tech-list">
+                            <li>C#</li>
+                            <li>.NET 6.0</li>
+                            <li>ASP.NET Core Blazor (WebAssembly)</li>
+                            <li>GraphQL</li>
+                            <li>Orchard Core CMS</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -283,6 +325,76 @@
                                 </div>
                             </a>
                             <p class="image-caption">CaseExcellence</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-featured" data-aos="fade-up">
+                    <h3 class="project-title">Aurora</h3>
+                    <div class="project-grid">
+                        <div class="project-content">
+                            <div class="project-links">
+                                <a href="https://www.aviateworld.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            </div>
+                            <p class="project-description">
+                                An innovative airlines booking and ticketing system using cutting-edge technology for world leading flag carrier airlines including American Airlines,
+                                British Airways and Air France.
+                            </p>
+                            <ul class="project-tech-list">
+                                <li>C#</li>
+                                <li>.NET 8</li>
+                                <li>ASP.NET Core</li>
+                                <li>Angular</li>
+                                <li>Dapper</li>
+                                <li>Microservices</li>
+                                <li>Clean Architecture</li>
+                                <li>Domain Driven Design</li>
+                                <li>SQL Server</li>
+                                <li>Amadeus GDS</li>
+                                <li>Redis Cache</li>
+                                <li>GRPC</li>
+                                <li>Kubernetes</li>
+                                <li>Azure DevOps</li>
+                                <li>Code Reviews</li>
+                                <li>Unit Testing / Integration Testing</li>
+                            </ul>
+                        </div>
+                        <div class="project-image-card">
+                            <a href="https://www.aviateworld.com/" target="_blank" class="image-link">
+                                <div class="image-wrapper">
+                                    <img src="assets/aurora.png" alt="Aurora Project Screenshot" />
+                                </div>
+                            </a>
+                            <p class="image-caption">Aurora</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-featured" data-aos="fade-up">
+                    <h3 class="project-title">Qwally</h3>
+                    <div class="project-grid">
+                        <div class="project-content">
+                            <div class="project-links">
+                                <a href="https://www.qwal.ly/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                            </div>
+                            <p class="project-description">
+                                A dynamic web application that changes content by retrieving data from Orchard Core CMS using GraphQL
+                                and builds a flowchart diagram based on a questionnaire.
+                            </p>
+                            <ul class="project-tech-list">
+                                <li>C#</li>
+                                <li>.NET 6</li>
+                                <li>ASP.NET Core</li>
+                                <li>Blazor (WebAssembly)</li>
+                                <li>Orchard Core CMS</li>
+                                <li>GraphQL</li>
+                            </ul>
+                        </div>
+                        <div class="project-image-card">
+                            <a href="https://www.qwal.ly/" target="_blank" class="image-link">
+                                <div class="image-wrapper">
+                                    <img src="assets/qwally.png" alt="Qwally Project Screenshot" />
+                                </div>
+                            </a>
+                            <p class="image-caption">Qwally</p>
                         </div>
                     </div>
                 </div>
